# tabeline

./: .gitattributes  .gitignore  404.html  Cargo.toml  LICENSE  README.md  index.html  mkdocs.yml  noxfile.py  pyproject.toml  rust-toolchain.toml  sitemap.xml
.github/workflows/: ci.yml  python.yml  release.yml
contributing/: index.html
creation/: index.html
docs/: CNAME  contributing.md  creation.md  export.md  index.md  indexing.md  overview.md  summary.md  types.md
docs/verbs/: concatenate.md  filter.md  group.md  group_by.md  join.md  mutate.md  select.md  sort.md  spread.md  summarize.md
export/: index.html
indexing/: index.html
overview/: index.html
python/tabeline/: __init__.py  _array.py  _concatenate.py  _data_frame.py  _record.py  exceptions.py  testing.py
python/tabeline/_expression/: __init__.py  _parser.py  _to_py_expression.py  ast.py
search/: search_index.json
src/: array.rs  arrow.rs  concatenate.rs  data_frame.rs  data_type.rs  lib.rs  py_expression.rs  py_function.rs  py_scalar.rs  testing.rs  workarounds.rs
src/error/: arrays_not_equal_error.rs  column_already_exists_error.rs  data_frames_not_equal_error.rs  duplicate_column_error.rs  filter_type_error.rs  function_argument_count_error.rs  function_argument_type_error.rs  function_not_implemented_error.rs  group_column_error.rs  group_index_out_of_bounds_error.rs  has_groups_error.rs  incomparable_types_error.rs  incompatible_length_error.rs  incompatible_type_error.rs  incompatible_types_error.rs  index_out_of_bounds_error.rs  mod.rs  no_groups_error.rs  nonexistant_column_error.rs  numeric_type_not_satisfied_error.rs  rename_existing_error.rs  summarize_type_error.rs  type_mismatch_error.rs  unknown_function_error.rs  unknown_variable_error.rs  unmatched_columns_error.rs  unmatched_group_levels_error.rs  unmatched_height_error.rs
src/expression/: ast.rs  mod.rs  substitute.rs
src/function/: branch.rs  convert.rs  elementwise_extrema.rs  finite.rs  interp.rs  item.rs  log.rs  logical.rs  mod.rs  n.rs  power.rs  reduction_extrema.rs  round.rs  row_index.rs  same.rs  sign.rs  statistics.rs  trapz.rs  trigonometry.rs
src/tabeline/: __init__.py  _array.py  _concatenate.py  _data_frame.py  _data_table.py  _data_type.py  _dummy.py  _record.py  _result.py  _validation.py  exceptions.py  testing.py
src/tabeline/_expression/: __init__.py  _functions.py  _parser.py  _substitute.py  _to_polars.py  ast.py
src/typed_expression/: ast.rs  data_frame_type.rs  error.rs  expression_type.rs  mod.rs  rules.rs  typed_function.rs  validate.rs
summary/: index.html
tests/: _grouping.py  _types.py  _xfail.py  test_array.py  test_attributes.py  test_cluster.py  test_concatenate_columns.py  test_concatenate_rows.py  test_csv.py  test_deselect.py  test_distinct.py  test_equality.py  test_filter.py  test_from_dict.py  test_functions.py  test_gather.py  test_group.py  test_group_by.py  test_indexing.py  test_inner_join.py  test_left_join.py  test_literals.py  test_mutate.py  test_null_columns.py  test_operators.py  test_outer_join.py  test_pandas.py  test_pandas_conversion.py  test_polars.py  test_polars_conversion.py  test_rename.py  test_select.py  test_slice.py  test_sort.py  test_spread.py  test_str.py  test_summarize.py  test_transmute.py  test_ungroup.py  test_unique.py  (+1 more)
tests/functions/: test_branch.py  test_convert.py  test_elementwise_extrema.py  test_empty_data_frames.py  test_finite.py  test_interp.py  test_item.py  test_log.py  test_logical.py  test_n.py  test_power.py  test_reduction_extrema.py  test_round.py  test_row_index.py  test_same.py  test_sign.py  test_statistics.py  test_trapz.py  test_trigonometry.py  test_validation.py
tests/operators/: _types.py  test_add.py  test_and.py  test_equals.py  test_float.py  test_floor_divide.py  test_inequalities.py  test_mod.py  test_multiply.py  test_negative.py  test_not.py  test_or.py  test_positive.py  test_power.py  test_subtract.py  test_true_divide.py  test_validation.py
tests/testing/: test_diff_arrays.py  test_diff_data_frames.py
types/: index.html
verbs/concatenate/: index.html
verbs/filter/: index.html
verbs/group/: index.html
verbs/group_by/: index.html
verbs/join/: index.html
verbs/mutate/: index.html
verbs/select/: index.html
verbs/sort/: index.html
verbs/spread/: index.html
verbs/summarize/: index.html
