[package]
name = "tabeline"
version = "0.6.3"
edition = "2021"

[lib]
name = "_tabeline"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27"
arrow = { version = "58" }
once_cell = "1.20"
# WORKAROUND: timezones and polars-expr are only needed due to dependency bugs in Polars
# https://github.com/pola-rs/polars/issues/25492
polars = { version = "0.53.0", features = ["lazy", "pivot", "csv", "abs", "log", "round_series", "trigonometry", "range", "dtype-i8", "dtype-i16", "dtype-u8", "dtype-u16", "timezones"] }
polars-expr = { version = "0.53.0", features = ["dtype-array"] }
polars-arrow = { version = "0.53.0" }
