[tool.poetry]
name = "tabeline"
version = "0.3.1"
description = "A data frame and data grammar library"
authors = ["David Hagen <david@drhagen.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://tabeline.drhagen.com"
repository = "https://github.com/drhagen/tabeline"
keywords = ["dataframe", "datatable", "datagrammar", "dplyr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]


[tool.poetry.dependencies]
python = "^3.9"
polars = "^0.17|^0.18"
numpy = "^1.24"
parsita = "^2.0"
typing_extensions = "^4.3"
pandas = { version = "^1.4", optional = true }
pyarrow = { version = "^11.0", optional = true }

[tool.poetry.dev-dependencies]
nox_poetry = "^1.0.2"

# Converters
pyarrow = "^11.0.0"
pandas = "^1.4"

# Test
pytest = "^7.2"
pytest-cov = "*"

# Lint
black = ">=23.3"
ruff = ">=0.0.275"

# Docs
mkdocs-material = "^9"

[tool.poetry.extras]
pandas = ["pandas", "pyarrow"]


[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
]
xfail_strict = true
filterwarnings = [
    # When running tests, treat warnings as errors (e.g. -Werror).
    "error",
]


[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.coverage.paths]
source = [
    "src/",
    ".nox/test*/lib/python*/site-packages/",
    ".nox/test*/Lib/site-packages/",
]


[tool.black]
line-length = 99


[tool.ruff]
src = ["src"]
line-length = 99
extend-select = [
    "I", # isort
    "N", # pep8-naming
    "RUF", # ruff
    "B", # flake8-bugbear
    "N", # flake8-broken-line
    "C4", # flake8-comprehensions
    "PIE", # flake8-pie
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "ERA", # flake8-eradicate
]
# F821: undefined-name; Parsita triggers this, but code coverage will catch it
extend-ignore = ["F821"]

[tool.ruff.per-file-ignores]
# F401: unused-import; Allow unused imports in __init__.py files
"__init__.py" = ["F401"]

[tool.ruff.isort]
extra-standard-library = ["typing_extensions"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
