[tool.poetry]
name = "tabeline"
version = "0.4.0"
description = "A data frame and data grammar library"
authors = ["David Hagen <david@drhagen.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://tabeline.drhagen.com"
repository = "https://github.com/drhagen/tabeline"
keywords = ["dataframe", "datatable", "datagrammar", "dplyr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]


[tool.poetry.dependencies]
# Ceiling at 3.12 required by numpy 1.x
python = "^3.9,<3.13"
polars = "0.19.12"
numpy = "^1.24"
parsita = "^2.0"
typing_extensions = "^4.3"
pandas = { version = "^2.0", optional = true }
pyarrow = { version = "^14.0", optional = true }

[tool.poetry.dev-dependencies]
nox_poetry = "^1.0.2"

# Converters
pyarrow = "^14.0.0"
pandas = "^2.0"

# Test
pytest = "^7.4"
pytest-cov = "*"

# Lint
black = ">=23.10"
ruff = "^0.1"

# Docs
mkdocs-material = "^9"

[tool.poetry.extras]
pandas = ["pandas", "pyarrow"]


[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
xfail_strict = true
filterwarnings = [
    # When running tests, treat warnings as errors (e.g. -Werror).
    "error",
]


[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]

[tool.coverage.paths]
source = [
    "src/",
    ".nox/test*/lib/python*/site-packages/",
    ".nox/test*/Lib/site-packages/",
]


[tool.black]
line-length = 99


[tool.ruff]
src = ["src"]
line-length = 99
extend-select = [
    "I", # isort
    "N", # pep8-naming
    "RUF", # ruff
    "B", # flake8-bugbear
    "N", # flake8-broken-line
    "C4", # flake8-comprehensions
    "PIE", # flake8-pie
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "ERA", # flake8-eradicate
]
# F821: undefined-name; Parsita triggers this, but code coverage will catch it
# B905: zip-without-explicit-strict; strict not available in Python 3.9
extend-ignore = ["F821", "B905"]

[tool.ruff.per-file-ignores]
# F401: unused-import; Allow unused imports in __init__.py files
"__init__.py" = ["F401"]

[tool.ruff.isort]
extra-standard-library = ["typing_extensions"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
